--- a/craftercms-plugin.yaml
+++ b/craftercms-plugin.yaml
@@ -1,6 +1,6 @@
 # MIT License
 #
-# Copyright (c) 2018-2021 Crafter Software Corporation. All Rights Reserved.
+# Copyright (c) 2018-2022 Crafter Software Corporation. All Rights Reserved.
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the "Software"), to deal
@@ -36,8 +36,8 @@ plugin:
   version:
     major: 1
     minor: 0
-    patch: 2
-  description: A Google Analytics plugin for Crafter CMS
+    patch: 3
+  description: A Google Analytics plugin for CrafterCMS
   documentation: "https://raw.githubusercontent.com/craftercms/google-analytics-plugin/master/readme.md"
   website:
     name: Google Analytics Plugin
@@ -49,12 +49,9 @@ plugin:
         url: https://raw.githubusercontent.com/craftercms/google-analytics-plugin/master/.crafter/cover.png
   developer:
     company:
-      name: Crafter Software
-      email: info@craftersoftware.com
-      url: https://craftersoftware.com
-  build:
-    id: c3d2a5444e6a24b5e0481d6ba87901d0b02716c8
-    date: 2021-07-12T00:00:00Z
+      name: CrafterCMS
+      email: info@craftercms.com
+      url: https://craftercms.com
   license:
     name: MIT
     url: https://opensource.org/licenses/MIT
