--- a/craftercms-plugin.yaml
+++ b/craftercms-plugin.yaml
@@ -36,7 +36,7 @@ plugin:
   version:
     major: 1
     minor: 0
-    patch: 10
+    patch: 11
   description: A Google Analytics plugin for CrafterCMS
   documentation: "https://raw.githubusercontent.com/craftercms/google-analytics-plugin/master/readme.md"
   website:
@@ -77,6 +77,18 @@ plugin:
     - major: 4
       minor: 0
       patch: 6
+    - major: 4
+      minor: 0
+      patch: 7
+    - major: 4
+      minor: 0
+      patch: 8
+    - major: 4
+      minor: 0
+      patch: 9
+    - major: 4
+      minor: 0
+      patch: 10
     - major: 4
       minor: 1
       patch: 0
