--- a/craftercms-plugin.yaml
+++ b/craftercms-plugin.yaml
@@ -105,6 +105,18 @@ plugin:
       minor: 1
       patch: 4
     - major: 4
+      minor: 1
+      patch: 5
+    - major: 4
+      minor: 1
+      patch: 6
+    - major: 4
+      minor: 1
+      patch: 7
+    - major: 4
+      minor: 1
+      patch: 8
+    - major: 4
       minor: 2
       patch: 0
     - major: 4
